@@ -25,6 +25,7 @@
     <Script file="immersive\skins\worldmap.lua"/>
     <Script file="immersive\skins\gossip.lua"/>
     <Script file="immersive\skins\misc.lua"/>
+    <Script file="immersive\skins\itemUpgrade.lua"/>
     
     <Script file="immersive\skins\addons\immersion.lua"/>
     <Script file="immersive\skins\addons\postal.lua"/>
