@@ -492,6 +492,7 @@ GW_DEFAULT["SKIN_WQT_ENABLED"] = true
 GW_DEFAULT["SOCKET_SKIN_ENABLED"] = true
 GW_DEFAULT["WORLDMAP_SKIN_ENABLED"] = true
 GW_DEFAULT["GOSSIP_SKIN_ENABLED"] = true
+GW_DEFAULT["ITEMUPGRADE_SKIN_ENABLED"] = true
 
 GW_DEFAULT["USE_BATTLEGROUND_HUD"] = true
 
